--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -7,7 +7,7 @@
 <div th:replace="~{fragments :: page-header}"></div>
 
 <div class="container body-content">
-  <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
+  <h1 th:text="${title}"></h1>
   <h2 class = "centered">View Jobs By Category</h2>
 </div>
 
@@ -18,7 +18,7 @@
     </th:block>
   </tr>
   <tr>
-    <!-- TODO #2: Complete the View Jobs By Category Table. -->
+    <!-- TODO #2: Complete the View Jobs By Category Tab -->
 
     <td>
       <li>
